syntax = "proto3";

import "Record.proto";
option java_package = "stream.models.proto.responses";
option java_generate_equals_and_hash = true;

message CreateTopicResponse {
  string topic = 1;
  int32 partitions = 2;
  repeated string shardGroups = 3;
}

